# effie

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: allocator.rs  guid.rs  lib.rs  protocol.rs  status.rs  types.rs  wstr.rs
src/guid/: error.rs  guid.rs  util.rs
src/protocols/: device_path.rs  file.rs  graphics_output.rs  loaded_image.rs  mod.rs  simple_filesystem.rs  simple_text_input.rs  simple_text_output.rs
src/tables/: boot_services.rs  mod.rs  runtime_services.rs  system.rs
