[workspace]
members = ["macros"]

[package]
name = "effie"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Idiomatic api to uefi"
documentation = "https://docs.rs/effie"
repository = "https://github.com/bread-bootloader/bread"
include = ["src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
bitflags = "2.11.1"
uguid = "2.2.1"
itoa = "1.0.18"
effie-macros = { version = "0.0.1", path = "macros" }
